homeWork-4, Generate Cool Numbers Automobiles